# tensorrtx

yolov5/: CMakeLists.txt
